# job-hunter-mcp

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  test_enrich_job_client.py
.cursor/rules/: README.md  learning_tracking_system.mdc  mcp_standards.mdc
alembic/: env.py
alembic/versions/: 14b4138bf5e1_add_fields_to_application.py  87c34fc946a3_update_job_and_application_schema.py  b6083500d0a3_updated_jobs_tech_stack.py  b9a021d683fa_add_fields_to_resume_model.py  df2a3611ea6c_updated_jobs_tech_stack.py
app/api/endpoints/: applications.py  jobs.py  mcp_tools.py  metadata.py  resumes.py
app/core/: ai_client.py  config.py  text_processor.py
app/db/: models.py  schemas.py  session.py
app/mcp/: __init__.py  metadata.py  server.py
app/mcp/schemas/: __init__.py  enrich_job.py  export_to_notion.py  fit_scoring.py
app/mcp/tools/: __init__.py  enrich_job.py  fit_scoring.py
app/services/: job_service.py
job-data-extractor/: background.js  content.js  manifest.json  sidepanel.html  sidepanel.js
rules/: learning_reinforcement.mdc
scripts/: init_db.py
tests/: test_enrich_job.py
