[project]
name = "job-hunter-mcp-server"
version = "0.1.0"
description = "AI Job Hunter MCP Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.12.0",
    "openai>=1.97.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "fastapi>=0.116.1",
    "sqlalchemy>=2.0.41",
]
